# ffmpeg-mcp

./: LICENSE  README.md  pyproject.toml
src/ffmpeg_mcp/: cut_video.py  ffmpeg.py  server.py  typedef.py  utils.py
