[project]
name = "ffmpeg-mcp"
version = "0.1.4"
description = "使用ffmpeg,对视频进行裁剪，拼接，滤镜等操作"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0"
]
classifiers = [
    "Environment :: MacOS X",
]
[project.urls]
Homepage = "https://github.com/video-creator/ffmpeg-mcp"

[tool.poetry]
packages = [
    {include = "ffmpeg_mcp", from = "src"},
]


[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[project.scripts]
ffmpeg-mcp = "ffmpeg_mcp.server:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

